[gd_scene load_steps=31 format=3 uid="uid://bb42qe07oouf3"]

[ext_resource type="Script" uid="uid://2pqwwb7d2bmq" path="res://scripts/serpiente.gd" id="1_wsisy"]
[ext_resource type="Texture2D"  path="res://nivel_2/enemigos/Snake/Snake_attack.png" id="2_kuam8"]
[ext_resource type="Texture2D"  path="res://nivel_2/enemigos/Snake/Snake_death.png" id="3_0dkqu"]
[ext_resource type="Texture2D"  path="res://nivel_2/enemigos/Snake/Snake_hurt.png" id="4_4wvgn"]
[ext_resource type="Texture2D"  path="res://nivel_2/enemigos/Snake/Snake_idle.png" id="5_ugvo0"]
[ext_resource type="Texture2D"  path="res://nivel_2/enemigos/Snake/Snake_walk.png" id="6_kam2t"]
[ext_resource type="AudioStream"  path="res://efectos_sonidos/serpiente/ataque_serpiente.mp3" id="7_4wvgn"]
[ext_resource type="AudioStream"  path="res://efectos_sonidos/serpiente/hurt_serpiente.mp3" id="8_ugvo0"]
[ext_resource type="AudioStream"  path="res://efectos_sonidos/serpiente/muerte_serpiente.mp3" id="9_kam2t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4wvgn"]
atlas = ExtResource("2_kuam8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugvo0"]
atlas = ExtResource("2_kuam8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kam2t"]
atlas = ExtResource("2_kuam8")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fuh2"]
atlas = ExtResource("2_kuam8")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmwoq"]
atlas = ExtResource("3_0dkqu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_85rpd"]
atlas = ExtResource("3_0dkqu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv6dn"]
atlas = ExtResource("3_0dkqu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b48mf"]
atlas = ExtResource("3_0dkqu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g34d"]
atlas = ExtResource("4_4wvgn")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbewe"]
atlas = ExtResource("4_4wvgn")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu4yx"]
atlas = ExtResource("5_ugvo0")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ea1"]
atlas = ExtResource("5_ugvo0")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4xtf"]
atlas = ExtResource("5_ugvo0")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eucch"]
atlas = ExtResource("5_ugvo0")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuqgp"]
atlas = ExtResource("6_kam2t")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cfv3"]
atlas = ExtResource("6_kam2t")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps6dj"]
atlas = ExtResource("6_kam2t")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjxil"]
atlas = ExtResource("6_kam2t")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5lw1b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wvgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugvo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kam2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fuh2")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmwoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85rpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv6dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b48mf")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g34d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbewe")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu4yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ea1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4xtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eucch")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuqgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cfv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps6dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjxil")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_djwl2"]
radius = 3.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wsisy"]
radius = 2.0
height = 14.0

[node name="Serpiente" type="CharacterBody2D"]
script = ExtResource("1_wsisy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -5)
scale = Vector2(0.291667, 0.291667)
sprite_frames = SubResource("SpriteFrames_5lw1b")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_djwl2")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(5, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wsisy")

[node name="AudioAtaque" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_4wvgn")

[node name="AudioDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ugvo0")

[node name="AudioMuerte" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kam2t")

[connection signal="body_entered" from="DamageArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_area_2d_body_exited"]
