extends CharacterBody2D

# ============ CONFIGURACI√ìN SIMPLE ============
@export var speed: float = 25.0
@export var detection_range: float = 10.0
@export var patrol_distance: float = 7.0

# ========== SISTEMA DE VIDA ==========
var vida := 50
var vida_maxima := 50
var esta_muerto := false

# ========== VARIABLES DE ATAQUE MEJORADAS ==========
var puede_atacar := true
var jugadores_en_area := []
const DISTANCIA_ATAQUE := 8.0
const TIEMPO_ENTRE_ATAQUES := 1.2
const DISTANCIA_PERSECUCION := 10.0
const TIEMPO_ENTRE_EMPUJES := 0.3
const FUERZA_EMPUJE := 200.0
const DANIO_POR_ATAQUE := 25

# ========== NUEVO: SISTEMA DE ATURDIMIENTO ==========
var esta_aturdido := false
var tiempo_aturdimiento := 0.0
const DURACION_ATURDIMIENTO := 0.8  # Segundos de aturdimiento

# Variables internas
var jugador: Node2D = null
var estado: String = "patrulla"
var estado_anterior: String = "patrulla"  # NUEVO: Para recordar estado anterior
var time_elapsed: float = 0.0
var attack_timer: float = 0.0

# Sistema de patrullaje fijo
var punto_izquierdo: Vector2
var punto_derecho: Vector2
var yendo_a_derecha: bool = true

# Variables para naturalidad
var speed_variation: float = 0.0

# Referencias a nodos
@onready var sprite = $AnimatedSprite2D
@onready var audio_ataque: AudioStreamPlayer2D = $AudioAtaque
@onready var audio_damage: AudioStreamPlayer2D = $AudioDamage 
@onready var audio_muerte: AudioStreamPlayer2D = $AudioMuerte

func _ready():
	print("=== SERPIENTE INICIANDO ===")
	
	# AGREGAR AL GRUPO DE ENEMIGOS PARA LAS BALAS
	add_to_group("enemigos")
	
	# Buscar jugador
	jugador = get_tree().get_first_node_in_group("jugador")
	if not jugador:
		jugador = get_tree().get_first_node_in_group("player")
	
	if jugador:
		print("‚úÖ Jugador encontrado: ", jugador.name)
	else:
		print("‚ùå No hay jugador")
	
	# Configurar DamageArea
	if has_node("DamageArea"):
		$DamageArea.body_entered.connect(_on_DamageArea_body_entered)
		$DamageArea.body_exited.connect(_on_DamageArea_body_exited)
	else:
		printerr("DamageArea no encontrada")
	
	# Configurar audio inicial
	configurar_audio()
	
	# Timer para empuje continuo
	var timer_empuje = Timer.new()
	timer_empuje.name = "TimerEmpuje"
	timer_empuje.wait_time = TIEMPO_ENTRE_EMPUJES
	timer_empuje.timeout.connect(_aplicar_empuje_continuo)
	add_child(timer_empuje)
	timer_empuje.start()
	
	# Establecer puntos fijos de patrullaje
	punto_izquierdo = Vector2(global_position.x - patrol_distance, global_position.y)
	punto_derecho = Vector2(global_position.x + patrol_distance, global_position.y)
	
	# Direcci√≥n inicial aleatoria
	yendo_a_derecha = randf() > 0.5
	
	sprite.play("idle")

# ========== CONFIGURACI√ìN DE AUDIO ==========
func configurar_audio() -> void:
	# Verificar que los nodos de audio existan
	if not has_node("AudioAtaque"):
		print("Advertencia: Nodo AudioAtaque no encontrado")
	else:
		audio_ataque.volume_db = -5.0  # Ajustar volumen
	
	if not has_node("AudioDamage"):
		print("Advertencia: Nodo AudioDamage no encontrado")
	else:
		audio_damage.volume_db = -8.0
	
	if not has_node("AudioMuerte"):
		print("Advertencia: Nodo AudioMuerte no encontrado")
	else:
		audio_muerte.volume_db = -3.0

func _physics_process(delta):
	# No hacer nada si est√° muerto
	if esta_muerto:
		return
	
	time_elapsed += delta
	
	# NUEVO: Actualizar timer de aturdimiento
	if esta_aturdido:
		tiempo_aturdimiento -= delta
		if tiempo_aturdimiento <= 0:
			esta_aturdido = false
			print("=== SERPIENTE YA NO EST√Å ATURDIDA ===")
			# Volver al estado anterior o idle
			if estado_anterior == "ataca":
				sprite.play("attack")
			elif estado_anterior == "persigue" or estado_anterior == "persigue_agresivo":
				sprite.play("walk")
			else:
				sprite.play("idle")
		else:
			# Mantenerse aturdido (no hacer nada m√°s)
			velocity.x = 0
			return
	
	# Actualizar timer de ataque
	if attack_timer > 0:
		attack_timer -= delta
		if attack_timer <= 0:
			puede_atacar = true
			print("=== SERPIENTE ATAQUE DISPONIBLE ===")
		
	if not is_on_floor():
		velocity.y += 980 * delta
	
	ia_con_ataque_mejorada()
	move_and_slide()

# ========== IA MEJORADA CON ATAQUE ==========
func ia_con_ataque_mejorada():
	if esta_muerto or esta_aturdido:
		return
		
	var distancia = INF
	if jugador and is_instance_valid(jugador):
		distancia = global_position.distance_to(jugador.global_position)

	# L√ìGICA MEJORADA: M√°s agresiva y pegajosa
	if distancia <= DISTANCIA_ATAQUE:
		# Est√° en rango de ataque
		atacar_mejorado()
	elif distancia <= DISTANCIA_PERSECUCION:
		# Sigue persiguiendo hasta estar m√°s cerca
		perseguir_agresivo()
	elif distancia <= detection_range:
		# Detectado pero lejos, perseguir normal
		perseguir()
	else:
		# Lejos o sin jugador, patrullar
		patrullar()
	
	# Debug menos spam
	if int(time_elapsed) % 2 == 0:  # Solo cada 2 segundos
		print("üì° Estado: ", estado, " | Distancia: ", int(distancia), " | Puede atacar: ", puede_atacar, " | Aturdido: ", esta_aturdido)

# ========== ATAQUE MEJORADO ==========
func atacar_mejorado():
	if esta_muerto or esta_aturdido:
		return
		
	estado = "ataca"
	
	if not jugador:
		return
	
	# NUEVO: Seguir movi√©ndose hacia el jugador mientras ataca
	var direccion_x = sign(jugador.global_position.x - global_position.x)
	velocity.x = direccion_x * (speed * 0.3)  # Movimiento lento mientras ataca
	
	# MEJORADO: Reproducir sonido cada vez que puede atacar
	if puede_atacar:
		print("=== SERPIENTE INICIANDO ATAQUE ===")
		puede_atacar = false
		attack_timer = TIEMPO_ENTRE_ATAQUES  # Establecer cooldown
		
		# NUEVO: Reproducir sonido de ataque CADA VEZ
		_reproducir_sonido_ataque()
		
		# Reproducir animaci√≥n de ataque
		if sprite.sprite_frames.has_animation("attack"):
			sprite.play("attack")
		else:
			sprite.play("idle")
		
		# Orientar hacia el jugador
		sprite.flip_h = direccion_x > 0
		
	elif sprite.animation != "attack" and not puede_atacar:
		# Mantener animaci√≥n de ataque durante cooldown
		sprite.play("attack")
		sprite.flip_h = direccion_x > 0

# ========== REPRODUCIR SONIDO DE ATAQUE ==========
func _reproducir_sonido_ataque() -> void:
	if has_node("AudioAtaque") and audio_ataque.stream != null:
		# Variaci√≥n aleatoria en el pitch para m√°s variedad
		audio_ataque.pitch_scale = randf_range(0.8, 1.2)
		audio_ataque.play()
		print("üîä Reproduciendo sonido de ataque de serpiente")
	else:
		print("No se puede reproducir sonido de ataque")

# ========== SISTEMA DE DA√ëO MEJORADO ==========
func recibir_da√±o(cantidad: int) -> void:
	if esta_muerto:
		return
	
	vida -= cantidad
	print("Serpiente recibi√≥ ", cantidad, " de da√±o. Vida restante: ", vida)
	
	# NUEVO: Reproducir sonido de da√±o
	_reproducir_sonido_damage()
	
	# Guardar estado actual antes del aturdimiento
	estado_anterior = estado
	
	# Activar aturdimiento
	esta_aturdido = true
	tiempo_aturdimiento = DURACION_ATURDIMIENTO
	velocity.x = 0  # Detener inmediatamente
	
	# Reproducir animaci√≥n de hurt
	efecto_da√±o_mejorado()
	
	if vida <= 0:
		morir()

# ========== REPRODUCIR SONIDO DE DA√ëO ==========
func _reproducir_sonido_damage() -> void:
	if has_node("AudioDamage") and audio_damage.stream != null:
		audio_damage.pitch_scale = randf_range(0.9, 1.1)
		audio_damage.play()
		print("üîä Reproduciendo sonido de da√±o de serpiente")
	else:
		print("No se puede reproducir sonido de da√±o")

# ========== EFECTO VISUAL DE DA√ëO MEJORADO ==========
func efecto_da√±o_mejorado() -> void:
	if not sprite:
		return
	
	print("=== SERPIENTE RECIBIENDO DA√ëO - ANIMACI√ìN HURT ===")
	
	# Reproducir animaci√≥n de hurt
	if sprite.sprite_frames.has_animation("hurt"):
		sprite.play("hurt")
		print("‚úÖ Reproduciendo animaci√≥n HURT")
	else:
		print("‚ùå Animaci√≥n 'hurt' no encontrada")
		# Parpadeo rojo como respaldo
		parpadeo_rojo()

# ========== PARPADEO ROJO (RESPALDO) ==========
func parpadeo_rojo() -> void:
	var color_original = sprite.modulate
	sprite.modulate = Color(1, 0.2, 0.2)  # Rojo
	
	# Crear un timer para restaurar el color
	var timer = Timer.new()
	timer.wait_time = 0.2
	timer.one_shot = true
	timer.timeout.connect(func(): 
		if sprite:
			sprite.modulate = color_original
		timer.queue_free()
	)
	add_child(timer)
	timer.start()

# ========== MUERTE ==========
func morir() -> void:
	if esta_muerto:
		return
		
	esta_muerto = true
	puede_atacar = false
	esta_aturdido = false  # Ya no importa el aturdimiento
	velocity = Vector2.ZERO
	
	print("¬°Serpiente eliminada!")
	
	# NUEVO: Reproducir sonido de muerte
	_reproducir_sonido_muerte()
	
	# Detener el timer de empuje
	if has_node("TimerEmpuje"):
		$TimerEmpuje.stop()
	
	# Detener otros sonidos
	if has_node("AudioAtaque"):
		audio_ataque.stop()
	
	# Reproducir animaci√≥n de muerte
	if sprite and sprite.sprite_frames.has_animation("death"):
		sprite.play("death")
		await sprite.animation_finished
	else:
		print("Animaci√≥n 'death' no encontrada")
		await get_tree().create_timer(1.0).timeout
	
	# Eliminar la serpiente
	queue_free()

# ========== REPRODUCIR SONIDO DE MUERTE ==========
func _reproducir_sonido_muerte() -> void:
	if has_node("AudioMuerte") and audio_muerte.stream != null:
		audio_muerte.pitch_scale = randf_range(0.8, 1.0)
		audio_muerte.play()
		print("üîä Reproduciendo sonido de muerte de serpiente")
	else:
		print("No se puede reproducir sonido de muerte")

# ========== PATRULLA FIJO ENTRE DOS PUNTOS ==========
func patrullar():
	if esta_aturdido:
		return
		
	estado = "patrulla"
	
	# Determinar punto objetivo
	var punto_objetivo = punto_derecho if yendo_a_derecha else punto_izquierdo
	var distancia_al_objetivo = global_position.distance_to(punto_objetivo)
	
	# Si lleg√≥ cerca del objetivo, cambiar direcci√≥n
	if distancia_al_objetivo < 5.0:
		yendo_a_derecha = !yendo_a_derecha
		print("üîÑ Serpiente cambiando direcci√≥n - Ahora va a: ", "derecha" if yendo_a_derecha else "izquierda")
	
	# Calcular direcci√≥n de movimiento
	var direccion_x = 1 if yendo_a_derecha else -1
	
	# Aplicar variaci√≥n sutil de velocidad para naturalidad
	speed_variation = sin(time_elapsed * 2.0) * 0.1
	var velocidad_actual = speed * 0.5 * (1.0 + speed_variation)
	
	# Aplicar movimiento
	velocity.x = direccion_x * velocidad_actual
	
	# Animaciones
	if abs(velocity.x) > 3:
		sprite.play("walk")
		sprite.flip_h = velocity.x > 0
	else:
		sprite.play("idle")

# ========== PERSEGUIR AGRESIVO (NUEVO) ==========
func perseguir_agresivo():
	if esta_aturdido:
		return
		
	estado = "persigue_agresivo"
	
	if not jugador:
		return
	
	var direccion_x = sign(jugador.global_position.x - global_position.x)
	var velocidad_agresiva = speed * 1.5  # M√ÅS R√ÅPIDO: de 1.0 a 1.5
	
	velocity.x = direccion_x * velocidad_agresiva
	
	sprite.play("walk")
	sprite.flip_h = velocity.x > 0

# ========== PERSEGUIR SIMPLE ==========
func perseguir():
	if esta_aturdido:
		return
		
	estado = "persigue"
	
	if not jugador:
		return
	
	var direccion_x = sign(jugador.global_position.x - global_position.x)
	var velocidad_persecucion = speed * 1.2  # M√ÅS R√ÅPIDO: de 0.8 a 1.2
	
	velocity.x = direccion_x * velocidad_persecucion
	
	sprite.play("walk")
	sprite.flip_h = velocity.x > 0

# ========== √ÅREA DE DA√ëO ==========
func _on_DamageArea_body_entered(body: Node) -> void:
	if esta_muerto:
		return
		
	if (body.is_in_group("jugador") or body.name == "jugador") and not jugadores_en_area.has(body):
		jugadores_en_area.append(body)
		print("Jugador entr√≥ en √°rea de serpiente: ", body.name)

func _on_DamageArea_body_exited(body: Node) -> void:
	if (body.is_in_group("jugador") or body.name == "jugador") and jugadores_en_area.has(body):
		jugadores_en_area.erase(body)
		print("Jugador sali√≥ del √°rea de serpiente: ", body.name)

# ========== EMPUJE CONTINUO MEJORADO ==========
func _aplicar_empuje_continuo() -> void:
	if jugadores_en_area.is_empty() or esta_muerto or esta_aturdido:
		return
	
	# NUEVO: Solo aplicar empuje si est√° en estado de ataque
	if estado != "ataca":
		return
	
	print("=== SERPIENTE APLICANDO EMPUJE CONTINUO ===")
	
	for jugador_body in jugadores_en_area:
		if not is_instance_valid(jugador_body):
			jugadores_en_area.erase(jugador_body)
			continue
		
		# Aplicar da√±o
		if jugador_body.has_method("bajar_vida"):
			jugador_body.bajar_vida(DANIO_POR_ATAQUE)
		elif jugador_body.has_method("take_damage"):
			jugador_body.take_damage(DANIO_POR_ATAQUE)
		
		# Aplicar empuje
		aplicar_empuje(jugador_body)

# ========== EMPUJE ==========
func aplicar_empuje(jugador_body: Node) -> void:
	if esta_muerto or esta_aturdido:
		return
		
	var direccion_x = sign(jugador_body.global_position.x - global_position.x)
	var direccion_empuje = Vector2(direccion_x, 0).normalized()
	
	if jugador_body is CharacterBody2D:
		jugador_body.velocity = direccion_empuje * FUERZA_EMPUJE
		jugador_body.move_and_slide()
		print("Empuje aplicado (CharacterBody2D)")
	elif jugador_body is RigidBody2D:
		jugador_body.apply_central_impulse(direccion_empuje * FUERZA_EMPUJE)
		print("Empuje aplicado (RigidBody2D)")



# ========== FUNCI√ìN LEGACY (mantener compatibilidad) ==========
func recibir_danio(cantidad: float):
	recibir_da√±o(int(cantidad))
